2007-09-25  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/taglib/gstapev2mux.cc:
	* ext/taglib/gstid3v2mux.cc:
	* gst/apetag/gstapedemux.c:
	  Add support for the new GST_TAG_COMPOSER (#459809).

2007-09-25  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/law/alaw-decode.c:
	* gst/law/alaw-decode.h:
	* gst/law/alaw-encode.c:
	* gst/law/alaw-encode.h:
	* gst/law/alaw.c:
	* gst/law/mulaw-conversion.h:
	  Compulsive clean-ups: use boilerplate macros, add debug
	  categories, fix up things to conform to symbol nomenklatura,
	  etc.

2007-09-25  Tim-Philipp Müller  <tim at centricular dot net>

	Based on patch by: Laurent Glayal  <spglegle yahoo fr>

	* gst/law/alaw-decode.c:
	* gst/law/alaw-encode.c:
	  Use static tables for A-Law decoding and encoding; this makes
	  A-Law decoding and encoding less CPU-intensive, but increases
	  the binary size a bit. Leaving old code around for now,
	  selectable by a define in the code. Fixes #435435.

2007-09-25  Sebastian Dröge  <slomo@circular-chaos.org>

	* configure.ac:
	Use AG_GST_ARG_WITH_PLUGINS, AG_GST_ARG_ENABLE_EXTERNAL and
	AG_GST_ARG_ENABLE_EXPERIMENTAL instead of duplicating those macros
	in configure.ac.

2007-09-25  Sebastian Dröge  <slomo@circular-chaos.org>

	Patch by: <j at bootlab dot org>

	* gst/qtdemux/qtdemux.c: (qtdemux_video_caps):
	Add fourccs for MPEG2 HDV streams. Fixes #479960.

2007-09-23  Stefan Kost  <ensonic@users.sf.net>

	* sys/oss/gstosshelper.c:
	  Use GST_WARNING instead of a g_critical. This situation is not caused
	  by the application.

2007-09-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* po/LINGUAS:
	* po/nl.po:
	  Updated translations.

2007-09-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	translated by: Mikel Olasagasti <hey_neken@mundurat.net>

	* po/eu.po:
	  Added Basque translation.

2007-09-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	translated by: Abel Cheung <abelcheung@gmail.com>

	* po/zh_HK.po:
	* po/zh_TW.po: